# jax-image-prediction

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dev_requirements.txt  pyproject.toml  setup.cfg  tox.ini
.github/: ISSUE_TEMPLATE.md
notebooks/: dataloader_moving_mnist.py  run_script.py  testing_notebook.ipynb
src/: main.py
src/jax_image_prediction/: __init__.py  exp.py  model.py  modules.py  optimizer.py  simvp.py  simvp_modules_torch.py  simvp_torch.py  training.py  util.py
