[build-system]
requires = ['setuptools>=45', 'wheel']
build-backend = "setuptools.build_meta"


[tool.black]
skip-string-normalization = true
line-length = 100
target-version = ['py39']
include = '\.pyi?$'


# see https://black.readthedocs.io/en/stable/compatible_configs.html#formats
[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
known_first_party = ["{{cookiecutter.primary_module}}"]

# see https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
[tool.mypy]
python_version = "3.9"
warn_return_any = true

[tool.pydocstyle]
convention = "google"
add_ignore = [
  'D104', # Missing docstring in public package (don't force everyone to comment __init__.py)
]

[tool.flake8]
max-complexity = 10
exclude = ".svn,CVS,.bzr,.hg,.git,__pycache__,.tox,.eggs,*.egg,__init__.py,docs"
# These settings are required for compatibility with black
# See https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#flake8
extend-ignore = "E203"
max-line-length = 100