# --- Package -------------------------------------------------------------------------------------
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name =  "jax-image-prediction"
version = "0.1.0"
description = "A simple embodied image predictor in jax."
readme = "README.md"
authors = [
    {name = "Daniel Marthaler"},
]
maintainers = [
    {name = "Daniel Marthaler"},
]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "coverage",
    "coveralls",
    "pytest",
]

[project.urls]
Repository = "https://https://github.com/mathDR/jax-image-prediction.git"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]


# --- Ruff ----------------------------------------------------------------------------------------
[tool.ruff]
extend-include = ["*.ipynb"]

line-length = 100
target-version = "3.11"

# See https://docs.astral.sh/ruff/rules/
[tool.ruff.lint]
select = [
    # defaults
    "E4", "E7", "E9", "F",
    "D", # pydocstyle
    "N", # pep8 naming
    "UP", # pyuupdate
    "RUF", # ruff rules
    "I", # i-sort
    "PD", # pandas-vet
    "NPY", # numpy
]
ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "D417"
]

[tool.ruff.format]
# As of Ruff v0.4.1, this setting is false by default (but will be true in the future so adopting
# the future default)
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

# --- mypy ----------------------------------------------------------------------------------------
# see https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
[tool.mypy]
python_version = "3.11"
warn_return_any = true

# --- tox -----------------------------------------------------------------------------------------
[tool.tox]
legacy_tox_ini = """
  [tox]
  envlist = 3.11
  isolated_build = True

  [testenv]
  deps=
  commands=
    pip install -e .[dev] --progress-bar off
    coverage run --source jax-image-prediction -m pytest
"""