# All options are documented and described here:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html

[metadata]
name = {{ cookiecutter.repository_and_package_name }}
version = 0.1.0
description = {{ cookiecutter.project_short_description }}
long_description = file: README.md
author = {{ cookiecutter.full_name }}
maintainer = {{ cookiecutter.full_name }}
url = https://github.com/stitchfix/{{ cookiecutter.repository_and_package_name }}


[options]
package_dir =
    =src
packages = find:
python_requires = >={{ cookiecutter.minimum_python_version }}
tests_require =
    pytest
# install_requires =
#


[options.packages.find]
where = src