# All options are documented and described here:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html

[metadata]
name =  "jax-image-prediction"
version = 0.1.0
description = "A simple embodied image predictor in jax."
long_description = file: README.md
author = "Daniel Marthaler"
maintainer = "Daniel Marthaler"
url = https://https://github.com/mathDR/jax-image-prediction.git


[options]
package_dir =
    =src
packages = find:
python_requires = >=3.11
tests_require =
    pytest

[options.packages.find]
where = src